Opened 15 years ago
Closed 15 years ago
#6280 closed bug (fixed)
Long network interface names cause problems
Reported by: | atis.elsts | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Network & Internet | Version: | R1/alpha2 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description (last modified by )
There is a potential crash when the length of an interface name is equal to IF_NAMESIZE. In this case the C string in the ifr_name field may not be null-terminated. This situation should be taken in account everywhere when the struct ifreq is used in the kernel and in the userspace.
To repeat: try to configure intarface alias with name '/dev/net/etherpci/0:123456789012':
ifconfig /dev/net/etherpci/0:123456789012 1.2.3.4
Change History (1)
comment:1 by , 15 years ago
Description: | modified (diff) |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Since the kernel would only cut off the extra bytes, I've just fixed the userland tools to fail earlier with the "interface name too long" message in hrev37689.