* On Haiku, ifreq::ifr_name always includes the trailing null byte. Adjusted   userland code to take this into account (the kernel would just cut off the   name). * This closes ticket #6280.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@37689 a95241bf-73f2-0310-859d-f6bbb57e9c96